pB: worry about it.

--- a/4-keyword-extraction/time_series.ipynb
+++ b/4-keyword-extraction/time_series.ipynb
@@ -109,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "朱立倫 總統 選票 監督 反對 選 不斷 投票 夜 票 國際 穩定 1月 16日 消息 傷害 賠償 南 1 14 懇請 公開 現狀 下 中國 28 施政 一定 天 不要 競選 公車 困難 標準 能源 辯論 自信 開心 冷 元旦 堅定 關懷 部落 辯論會 抗議 進行 非 技術 31 生產 22 倒數 憲政 報告 即將 人選 交流 深刻 登記 頂 人物 經營 何 新加坡 恐怖 證所稅 年金 預計 團體 簽署 多少 取消 領導人 食品 衝 尊嚴 政黨票 拜託 黃安 選情 馬習會 表 馬 黑箱 食安 二十 柯 關 陳建仁 抹黑 11月 等於 廠 投給 過半 工人 出力 馬習 屬 聲明 馬英九 會面 習近平 協議 見面 停止 安排 握 鬥陣 叫做 舉行 聖誕 故宮 南院 前往 KMT 資產 陣營 ② 交換 頂新 藝人 知 購 破壞 地位 ① 黑心 軍宅 無罪 板橋區 116 "
+      "朱立倫 總統 選票 監督 反對 選 不斷 投票 夜 國際 穩定 1月 16日 消息 傷害 賠償 1 14 懇請 公開 大眾 現狀 下 中國 28 施政 一定 不要 競選 公車 困難 標準 造勢 能源 辯論 自信 開心 冷 元旦 堅定 關懷 部落 辯論會 抗議 進行 非 技術 31 22 憲政 報告 人選 交流 登記 頂 人物 經營 何 新加坡 恐怖 證所稅 年金 預計 團體 簽署 多少 取消 領導人 食品 衝 尊嚴 政黨票 拜託 黃安 選情 馬習會 表 馬 黑箱 食安 二十 柯 關 陳建仁 抹黑 11月 等於 廠 投給 過半 工人 出力 馬習 屬 聲明 馬英九 會面 習近平 協議 見面 停止 安排 握 鬥陣 叫做 舉行 聖誕 故宮 南院 前往 KMT 資產 陣營 ② 交換 婚姻 頂新 藝人 知 購 破壞 地位 ① 黑心 軍宅 無罪 板橋區 116 "
      ]
     }
    ],
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "132"
+       "128"
       ]
      },
      "execution_count": 8,
@@ -152,28 +152,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "94"
+       "83"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meaningful = {'KMT', '①', '②', '中國', '交換', '交流', '人物', '人選', '倒數', '停止', '傷害', '冷', '出力',\n",
-    " '前往', '協議', '南院', '即將', '反對', '取消', '叫做', '困難', '國際', '團體', '地位', '堅定', '報告', '夜', '安排',\n",
-    " '尊嚴', '屬', '工人', '年金', '廠', '恐怖', '憲政', '懇請', '技術', '投票', '投給', '抗議', '抹黑', '拜託', '握',\n",
-    " '政黨票', '故宮', '新加坡', '會面', '朱立倫', '標準', '消息', '無罪', '現狀', '登記', '監督', '破壞', '票', '穩定',\n",
-    " '簽署', '經營', '總統', '習近平', '聲明', '能源', '自信', '舉行', '藝人', '衝', '表', '見面', '證所稅', '賠償', '購',\n",
-    " '軍宅', '辯論', '辯論會', '進行', '過半', '選票', '部落', '關', '陳建仁', '頂', '頂新', '領導人', '食品', '食安', '馬',\n",
-    " '馬習', '馬習會', '馬英九', '鬥陣', '黃安', '黑心', '黑箱'}\n",
+    "meaningful = {\n",
+    "    '朱立倫': 1, '總統': 3, '選票': 12, '監督': 3, '反對': 3, '投票': 13,\n",
+    "    '夜': 13, '國際': 3, '傷害': 3, '賠償': 11, '懇請': 13, '現狀': 3,\n",
+    "    '中國': 3, '困難': 7, '標準': 6, '能源': 7, '辯論': 10, '自信': 1,\n",
+    "    '堅定': 13, '部落': 1, '辯論會': 10, '抗議': 3, '進行': 3, '技術': 9,\n",
+    "    '憲政': 3, '報告': 3, '人選': 5, '交流': 3, '登記': 6, '頂': 6,\n",
+    "    '人物': 1, '經營': 7, '新加坡': 3, '恐怖': 4, '證所稅': 5, '年金': 8,\n",
+    "    '簽署': 3, '取消': 1, '領導人': 3, '食品': 6, '衝': 7, '尊嚴': 3,\n",
+    "    '拜託': 13, '黃安': 13, '馬習會': 3, '表': 3, '馬': 3, '黑箱': 3,\n",
+    "    '食安': 6, '關': 5, '陳建仁': 5, '廠': 5, '投給': 13, '過半': 12,\n",
+    "    '工人': 5, '出力': 1, '馬習': 3, '屬': 3, '聲明': 3, '馬英九': 3,\n",
+    "    '會面': 3, '習近平': 3, '協議': 3, '見面': 3, '停止': 3, '安排': 3,\n",
+    "    '握': 3, '鬥陣': 3, '舉行': 3, '故宮': 10, '南院': 10, '前往': 3,\n",
+    "    'KMT': 10, '②': 10, '交換': 3, '頂新': 8, '藝人': 5, '購': 7,\n",
+    "    '地位': 3, '①': 12, '黑心': 6, '軍宅': 8, '無罪': 6\n",
+    "}\n",
     "len(meaningful)"
    ]
   },
@@ -184,16 +193,14 @@
    "outputs": [],
    "source": [
     "from matplotlib import pyplot\n",
-    "group = {}\n",
     "for k, v in top_terms_with_peak.items():\n",
     "    if k in meaningful:\n",
     "        v.plot()\n",
     "        pyplot.show()\n",
-    "        option = ''\n",
-    "        while not option.isdecimal():\n",
-    "            option = input(k + ' ')\n",
-    "        group[k] = int(option)\n",
-    "        print(group)"
+    "        option = input(k + ' ' + meaningful[k] + ' ')\n",
+    "        if option:\n",
+    "            meaningful[k] = int(option)\n",
+    "            print(meaningful)"
    ]
   },
   {
