pB: cleaning terms.

--- a/4-keyword-extraction/time_series.ipynb
+++ b/4-keyword-extraction/time_series.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "128"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,38 +152,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "83"
+       "77"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "meaningful = {\n",
-    "    '朱立倫': 1, '總統': 3, '選票': 12, '監督': 3, '反對': 3, '投票': 13,\n",
-    "    '夜': 13, '國際': 3, '傷害': 3, '賠償': 11, '懇請': 13, '現狀': 3,\n",
-    "    '中國': 3, '困難': 7, '標準': 6, '能源': 7, '辯論': 10, '自信': 1,\n",
-    "    '堅定': 13, '部落': 1, '辯論會': 10, '抗議': 3, '進行': 3, '技術': 9,\n",
-    "    '憲政': 3, '報告': 3, '人選': 5, '交流': 3, '登記': 6, '頂': 6,\n",
-    "    '人物': 1, '經營': 7, '新加坡': 3, '恐怖': 4, '證所稅': 5, '年金': 8,\n",
-    "    '簽署': 3, '取消': 1, '領導人': 3, '食品': 6, '衝': 7, '尊嚴': 3,\n",
-    "    '拜託': 13, '黃安': 13, '馬習會': 3, '表': 3, '馬': 3, '黑箱': 3,\n",
-    "    '食安': 6, '關': 5, '陳建仁': 5, '廠': 5, '投給': 13, '過半': 12,\n",
-    "    '工人': 5, '出力': 1, '馬習': 3, '屬': 3, '聲明': 3, '馬英九': 3,\n",
-    "    '會面': 3, '習近平': 3, '協議': 3, '見面': 3, '停止': 3, '安排': 3,\n",
-    "    '握': 3, '鬥陣': 3, '舉行': 3, '故宮': 10, '南院': 10, '前往': 3,\n",
-    "    'KMT': 10, '②': 10, '交換': 3, '頂新': 8, '藝人': 5, '購': 7,\n",
-    "    '地位': 3, '①': 12, '黑心': 6, '軍宅': 8, '無罪': 6\n",
+    "    '朱立倫': 1, '總統': 3, '選票': 12, '監督': 3, '投票': 13, '夜': 13,\n",
+    "    '國際': 3, '傷害': 3, '賠償': 11, '現狀': 3, '中國': 3, '標準': 6,\n",
+    "    '能源': 7, '辯論': 10, '自信': 1, '堅定': 13, '部落': 1, '辯論會': 10,\n",
+    "    '抗議': 3, '憲政': 3, '報告': 3, '人選': 5, '交流': 3, '登記': 6,\n",
+    "    '頂': 6, '人物': 1, '經營': 7, '新加坡': 3, '恐怖': 4, '證所稅': 5,\n",
+    "    '年金': 8, '簽署': 3, '取消': 1, '領導人': 3, '食品': 6, '衝': 7,\n",
+    "    '尊嚴': 3, '拜託': 13, '黃安': 13, '馬習會': 3, '表': 3, '馬': 3,\n",
+    "    '黑箱': 3, '食安': 6, '關': 5, '陳建仁': 5, '廠': 5, '投給': 13,\n",
+    "    '過半': 12, '工人': 5, '出力': 1, '馬習': 3, '屬': 3, '聲明': 3,\n",
+    "    '馬英九': 3, '會面': 3, '習近平': 3, '協議': 3, '見面': 3, '停止': 3,\n",
+    "    '安排': 3, '握': 3, '鬥陣': 3, '舉行': 3, '故宮': 10, '南院': 10,\n",
+    "    '前往': 3, '②': 10, '交換': 3, '頂新': 8, '藝人': 5, '購': 7,\n",
+    "    '地位': 3, '①': 10, '黑心': 6, '軍宅': 8, '無罪': 6\n",
     "}\n",
     "len(meaningful)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['朱立倫', '自信', '部落', '人物', '取消', '出力']\n",
+      "[]\n",
+      "['總統', '監督', '國際', '傷害', '現狀', '中國', '抗議', '憲政', '報告', '交流', '新加坡', '簽署', '領導人', '尊嚴', '馬習會', '表', '馬', '黑箱', '馬習', '屬', '聲明', '馬英九', '會面', '習近平', '協議', '見面', '停止', '安排', '握', '鬥陣', '舉行', '前往', '交換', '地位']\n",
+      "['恐怖']\n",
+      "['人選', '證所稅', '關', '陳建仁', '廠', '工人', '藝人']\n",
+      "['標準', '登記', '頂', '食品', '食安', '黑心', '無罪']\n",
+      "['能源', '經營', '衝', '購']\n",
+      "['年金', '頂新', '軍宅']\n",
+      "[]\n",
+      "['辯論', '辯論會', '故宮', '南院', '②', '①']\n",
+      "['賠償']\n",
+      "['選票', '過半']\n",
+      "['投票', '夜', '堅定', '拜託', '黃安', '投給']\n"
+     ]
+    }
+   ],
+   "source": [
+    "groups = [[], [], [], [], [], [], [], [], [], [], [], [], []]\n",
+    "for k, v in meaningful.items():\n",
+    "    groups[v-1].append(k)\n",
+    "for group in groups:\n",
+    "    print(group)"
    ]
   },
   {
@@ -197,7 +229,7 @@
     "    if k in meaningful:\n",
     "        v.plot()\n",
     "        pyplot.show()\n",
-    "        option = input(k + ' ' + meaningful[k] + ' ')\n",
+    "        option = input(k + ' ' + str(meaningful[k]) + ' ')\n",
     "        if option:\n",
     "            meaningful[k] = int(option)\n",
     "            print(meaningful)"
