Add real numbers and graphs.

--- a/9-slides/main.tex
+++ b/9-slides/main.tex
@@ -276,8 +276,9 @@
 \begin{column}{.40\textwidth}
   \qquad 圖中的每個點皆代表一筆訓練／測試貼文，點的水平位置代表它在所有貼文中的位置。%
   紅點代表說服型競選貼文，一共有 651 筆；藍點代表攻擊型競選貼文，一共有 297 筆。\par
-  \qquad 本情感分類模型的準確度（accuracy）為 86.82\%，查準率（precision）為 87.6 5\%，%
-  查全率（recall）為 87 .65\%，F 度量（F-measure）為 87.65\%。%
+  \qquad 將攻擊型競選定義為陽性，%
+  本情感分類模型的準確度（accuracy）為 86.82\%，查準率（precision）為 85.2 5\%，%
+  查全率（recall）為 70 .29\%，F 度量（F-measure）為 76.75\%。\par
 \end{column}
 \end{columns}
 \end{frame}
