--- a/9-slides/main.tex
+++ b/9-slides/main.tex
@@ -241,6 +241,105 @@
 \end{columns}
 \end{frame}
 
+\begin{frame}{關鍵字擷取}
+\begin{itemize}
+\item 另一種分析各時間點之熱門議題的方法（謝明恩等人，2016）
+\item 尋找出現次數有明顯高峰的單詞
+  \begin{itemize}
+  \item 找出所有出現超過一百次的單詞
+  \item 統計每個單詞每日的出現率
+  \item 以「$\text{平均值}+2\times\text{標準差}$」為門檻，找出連續三日出現率高於\\門檻的單詞
+  \end{itemize}
+\item 找出在相近時間點出現高峰的單詞，組成詞組
+\item 從詞組反推事件
+\item 將事件中的每個單詞的出現率正規化，並繪圖
+\end{itemize}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{columns}
+\begin{column}{.68\textwidth}
+  \begin{figure}
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{ts01}
+  \end{figure}
+\end{column}
+\begin{column}{.28\textwidth}
+  竄升單詞：領導人\\
+  總統／監督／國際\\
+  傷害／現狀／中國\\
+  抗議／憲政／報告\\
+  交流／簽署／尊嚴\\
+  會面／見面／協議\\
+  鬥陣／舉行／前往\\
+  安排／交換／地位\\
+  表／黑箱／馬習會\\
+  馬／馬習／馬英九\\
+  屬／聲明／習近平\\
+  握／停止／新加坡\\
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts02}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts03}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts04}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts05}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts06}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts07}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts09}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts10}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts11}
+\end{figure}
+\end{frame}
+
+\begin{frame}{關鍵字擷取}
+\begin{figure}
+  \includegraphics[width=.7\textwidth, height=.7\textheight, keepaspectratio]{ts12}
+\end{figure}
+\end{frame}
+
 \section{
 哪些政黨／候選人／意見領袖最常使用攻擊型競選？\texorpdfstring{\protect\\}{}
 \hspace{.35em}什麼時候人們最常使用攻擊型競選？\texorpdfstring{\protect\\}{}
