--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -143,3 +143,10 @@ abstract = {This article explores how Twitter was used by voters to participate 
   abstract = {Gephi is an open source software for graph and network analysis. It uses a 3D render engine to display large networks in real-time and to speed up the exploration. A flexible and multi-task architecture brings new possibilities to work with complex data sets and produce valuable visual results. We present several key features of Gephi in the context of interactive exploration and interpretation of networks. It provides easy and broad access to network data and allows for spatializing, filtering, navigating, manipulating and clustering. Finally, by presenting dynamic features of Gephi, we highlight key aspects of dynamic network visualization.},
   url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
 }
+
+@misc{c16,
+  author = {{Plotly}},
+  title = {Plotly: Plotly for {Python}},
+  howpublished = {\url{https://plot.ly/d3-js-for-python-and-pandas-charts/}},
+  note = {Accessed: 2017-11-19}
+}
