--- a/7-thesis/citation.bib
+++ b/7-thesis/citation.bib
@@ -150,3 +150,11 @@ abstract = {This article explores how Twitter was used by voters to participate 
   howpublished = {\url{https://plot.ly/d3-js-for-python-and-pandas-charts/}},
   note = {Accessed: 2017-11-19}
 }
+
+@article{c17,
+author = {謝明恩 and 林立秦 and 張逸群 and 蔡明娟},
+title = {{P T T 軍情室}},
+journal = {2016 Data Mining Final Project Slides},
+number = {24},
+year = {2016},
+}
