--- a/7-thesis/ieeeconf.cls
+++ b/7-thesis/ieeeconf.cls
@@ -3302,8 +3302,8 @@ between column types.}%
 % that \cite.
 % Thanks to Mr. Arseneau for providing the required format arguments
 % to produce the IEEE style.
-\def\citepunct{], [}
-\def\citedash{]--[}
+\def\citepunct{,\,}
+\def\citedash{--}
 
 
 % V1.6b providing this command makes hyperref think the natbib package is
