--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -30,6 +30,7 @@
 \usepackage{array}     % for fixed column widths
 \usepackage{lscape}    % for landscape orientation
 \usepackage{caption}   % gives identical figure number
+\usepackage[noadjust]{cite} % improves cite format
 
 \title{\LARGE \bf
 社群網站上之政治活動分析：以台灣 2016 年總統選舉為例$^{\ast}$
@@ -976,7 +977,7 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 \end{landscape}
 
 \begin{figure}[!htbp]
-\makebox[\textwidth][c]{\includegraphics[width=\paperwidth]{sna_sm}}%
+\makebox[\textwidth][c]{\includegraphics[width=\paperwidth]{sna}}%
 \caption{貼文／連結的「分享」網絡圖}
 \label{f4}
 \end{figure}
